bt/classic: port RFCOMM socket from JNA to java.lang.foreign (FFM)
Replace JNA with the finalized Foreign Function & Memory API so the Bluetooth Classic transport carries no glibc-only native blob and works on musl. Compile against a JDK 25 toolchain (jdkHome, so java.lang.foreign resolves) while emitting JDK 21 bytecode (jvmTarget) so the daemon-JDK-21 KSP/atomicfu transforms can load the classes; the jvm-toolchain catalog stays 21 for the :blobdbgen KSP processor. Use the finalized API names: critical(false) (not isTrivial()) and the (MemorySegment,long) errno VarHandle (get(seg, 0L)). Bump GraalVM polyglot/js-community to 25.0.3.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>